syntax = "proto3";

package com.pda.distributed.network.grpc;

option java_multiple_files = true;


message PingRequest {
    string mensaje_saludo = 1;
}

message PingResponse {
    bool exito = 1;
    string respuesta = 2;
}

// Mensajes para Sincronizar Estado
message PeticionEstado {
    string datos_estado = 1;
}
message RespuestaEstado {
    bool exito = 1;
}

// Mensajes para Votaci√≥n (Quorum)
message PeticionVoto {
    string id_accion = 1;
}
message RespuestaVoto {
    bool acepta = 1;
}

// Mensajes para Subida de Archivos
message PeticionSubida {
    string id_archivo = 1;
    bytes fragmento = 2;
}
message RespuestaSubida {
    bool exito = 1;
}

// Servicio Principal del Nodo
service PdaService {
    rpc ping(PingRequest) returns (PingResponse) {}
    rpc sincronizarEstado(PeticionEstado) returns (RespuestaEstado) {}
    rpc votar(PeticionVoto) returns (RespuestaVoto) {}
    rpc subirFragmento(PeticionSubida) returns (RespuestaSubida) {}
}